[gd_scene load_steps=27 format=2]

[ext_resource path="res://actors/enemy_npc/eye_patrol/eye_patrol.gd" type="Script" id=1]
[ext_resource path="res://actors/enemy_npc/eye_patrol/IS_ATTACKING.gd" type="Script" id=2]
[ext_resource path="res://actors/enemy_npc/eye_patrol/IS_FOLLOWING.gd" type="Script" id=3]
[ext_resource path="res://actors/enemy_npc/eye_patrol/enemy_state.gd" type="Script" id=4]
[ext_resource path="res://actors/enemy_npc/eye_patrol/IS_IDLE.gd" type="Script" id=5]
[ext_resource path="res://pixel_smoother.tres" type="Material" id=6]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/eye_patroll_ball3.png" type="Texture" id=7]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/effect/shoot_animation3.png" type="Texture" id=8]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack/eye_patroll_ball_attack3.png" type="Texture" id=9]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack/eye_patroll_ball_attack2.png" type="Texture" id=10]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/effect/shoot_animation4.png" type="Texture" id=11]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/effect/shoot_animation2.png" type="Texture" id=12]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/effect/shoot_animation1.png" type="Texture" id=13]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack/eye_patroll_ball_attack4.png" type="Texture" id=14]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/eye_patroll_ball4.png" type="Texture" id=15]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack/eye_patroll_ball_attack1.png" type="Texture" id=16]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/eye_patroll_ball1.png" type="Texture" id=17]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/eye_patroll_ball2.png" type="Texture" id=18]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack2/eye_patroll_ball_attack_v3.png" type="Texture" id=19]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack2/eye_patroll_ball_attack_v2.png" type="Texture" id=20]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack2/eye_patroll_ball_attack_v5.png" type="Texture" id=21]
[ext_resource path="res://assets/enemySpriteSheets/eye_patrol_ball/model_3/attack2/eye_patroll_ball_attack_v4.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "asleep",
"speed": 1.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 19 ) ],
"loop": true,
"name": "targeted",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 7 ), ExtResource( 15 ) ],
"loop": false,
"name": "transition_to_attack",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 53.0094

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 119, 35 )

[node name="eye_patrol" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 6 )
frames = SubResource( 11 )
animation = "asleep"
playing = true

[node name="shoot_anim" type="AnimatedSprite" parent="."]
modulate = Color( 0.878431, 0.117647, 0.847059, 1 )
material = ExtResource( 6 )
frames = SubResource( 13 )

[node name="active_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="active_area"]
shape = SubResource( 12 )

[node name="EnemyState" type="Node" parent="."]
script = ExtResource( 4 )

[node name="IS_IDLE" type="Node" parent="EnemyState"]
script = ExtResource( 5 )

[node name="IS_ATTACKING" type="Node" parent="EnemyState"]
script = ExtResource( 2 )

[node name="IS_FOLLOWING" type="Node" parent="EnemyState"]
script = ExtResource( 3 )

[node name="bullet_spawn" type="Node2D" parent="."]
position = Vector2( -5, -1 )

[node name="shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="attacking_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="attacking_area"]
shape = SubResource( 14 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -18.0
margin_top = -37.0
margin_right = 22.0
margin_bottom = 3.0

[node name="RayCastTopLeft" type="RayCast2D" parent="."]
position = Vector2( -1, -2 )
enabled = true
cast_to = Vector2( -75, 0 )

[node name="RayCastTopRight" type="RayCast2D" parent="."]
position = Vector2( 1, -2 )
enabled = true
cast_to = Vector2( 75, 0 )

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
position = Vector2( -1, 2 )
enabled = true
cast_to = Vector2( -75, 0 )

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
position = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( 75, 0 )

[node name="LeftPoint" type="Node2D" parent="."]
position = Vector2( -71, 0 )

[node name="RightPoint" type="Node2D" parent="."]
position = Vector2( 72, 0 )

[connection signal="animation_finished" from="AnimatedSprite" to="EnemyState" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="active_area" to="EnemyState/IS_IDLE" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="shoot_timer" to="EnemyState/IS_ATTACKING" method="_on_shoot_timer_timeout"]
[connection signal="area_exited" from="attacking_area" to="EnemyState" method="_on_attacking_area_area_exited"]
